# system-configuration

./: .gitignore  .gitmodules  Makefile  README.md  art.toml  build-holograms.pl  build_package.pl  build_package_with_holo.pl  env.example  holodeck-arcturus.pkg.toml  holodeck-arcturus.pkg.toml.in  holodeck-bethselamin.pkg.toml  holodeck-damogran.pkg.toml  holodeck-damogran.pkg.toml.in  holodeck-krikkit.pkg.toml  holodeck-krikkit.toml  holodeck-kumo.pkg.toml  holodeck-magrathea.pkg.toml  holodeck-poghril.pkg.toml  holodeck-tabibito.pkg.toml  holodeck-traal.pkg.toml  holodeck-work-lxc.pkg.toml  holodeck-work-vm.pkg.toml  hologram-amd-ucode.pkg.toml  hologram-archlinux-mirror.pkg.toml  hologram-arcturus-capture-card.pkg.toml  hologram-automation.pkg.toml  hologram-base-accessible.pkg.toml  hologram-base-gui-minimal.pkg.toml  hologram-base-gui.pkg.toml  hologram-base-hetzner.pkg.toml  hologram-base.pkg.toml  hologram-base.pkg.toml.in  hologram-bethselamin-prosody.pkg.toml  hologram-bethselamin-synapse.pkg.toml  hologram-bluetooth-audio.pkg.toml  hologram-borgbackup-receiver.pkg.toml  hologram-catalyst-repo.pkg.toml  hologram-catalyst.pkg.toml  hologram-common-identity.pkg.toml  (+47 more)
ages-website/: .SRCINFO  PKGBUILD  README.md
art/: .SRCINFO  PKGBUILD
blog-generator/: .SRCINFO  PKGBUILD
cddb_get/: .SRCINFO  PKGBUILD
gandi-dyndns/: .SRCINFO  .gitignore  PKGBUILD  gandi-dyndns.service  wrapper.sh
gitea/: .SRCINFO  .source-url  PKGBUILD  gitea.install
gofu/: .SRCINFO  .gitignore  PKGBUILD
src/quickstart/: CMakeLists.txt  entry.cpp  entry.h  main.cpp  view.cpp  view.h
(+151 files in other folders)
